--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "devDependencies": {
     "express": "^5.1.0",
     "pg": "^8.16.3",
+    "prisma": "^6.12.0",
     "sequelize": "^6.37.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "jsonwebtoken": "^9.0.2",
