--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "reserver-backend",
   "version": "1.0.0",
-  "main": "src/server",
+  "main": "src/http/server",
   "scripts": {
-    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules -r tsconfig-paths/register --env-file .env src/server",
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules -r tsconfig-paths/register --env-file .env src/http/server",
     "test": "vitest"
   },
   "keywords": [],
